configured tenant auth
