# cuhara.qua.go/api/swagger.yml
@@ -7,6 +7,7 @@ servers:
   - url: /
 security:
   - BearerAuth: []
+  - TenantAuth: []
 paths:
   /api/v1/auth/login:
     post:
@@ -104,6 +105,8 @@ paths:
                 $ref: "#/components/schemas/deleteUserResponse"
   /api/v1/tenants:
     get:
+      security:
+        - BearerAuth: []
       tags:
         - tenant
       summary: Get tenants
@@ -116,6 +119,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/tenantResponse"
     post:
+      security:
+        - BearerAuth: []
       tags:
         - tenant
       summary: Create tenant
@@ -135,6 +140,8 @@ paths:
                 $ref: "#/components/schemas/createTenantResponse"
       x-codegen-request-body-name: createTenant
   /api/v1/tenants/{id}:
+    security:
+        - BearerAuth: []
     delete:
       tags:
         - tenant
@@ -155,6 +162,8 @@ paths:
               schema:
                 $ref: "#/components/schemas/deleteTenantResponse"
     patch:
+      security:
+        - BearerAuth: []
       tags:
         - tenant
       summary: Update tenant
@@ -951,4 +960,9 @@ components:
         Authorization: Bearer {token}\""
       name: Authorization
       in: header
+    TenantAuth:
+      type: apiKey
+      in: header
+      name: X-TENANT-ID
+      description: "Tenant ID header for multi-tenant authentication. Must be provided along with Bearer token for tenant-specific operations."
 x-original-swagger-version: "2.0"
